NetworkPolicy/allow-api-to-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-mongo
  namespace: skydrop
spec:
  podSelector:
    matchLabels:
      app: mongo
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: skydrop-server
  policyTypes:
    - Ingress
