NetworkPolicy/allow-front-web-to-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-front-web-to-server
  namespace: skydrop
spec:
  podSelector:
    matchLabels:
      app: skydrop-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: skydrop-frontend
    - podSelector:
        matchLabels:
          app: skydrop-web
    ports:
    - protocol: TCP
      port: 3001
