NetworkPolicy/allow-server-to-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-server-to-mongo
  namespace: skydrop
spec:
  podSelector:
    matchLabels:
      app: skydrop-server
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mongo-headless
